dev:change: Updating energy tool to newest copy

--- a/libs/jade/dev/energy/comparison.jade
+++ b/libs/jade/dev/energy/comparison.jade
@@ -180,10 +180,15 @@ block content
 				p To help you compare customer service, we’ve given energy suppliers a star rating based on:
 
 				ul
-					li how many complaints were made about them to third parties
+					li how many complaints were made about them to third parties, eg Citizens Advice
 					li how easy it is to contact them
 					li how easy their bills are to understand
 					li how good suppliers are at switching
+					li whether they’re signed up to the Energy Switch Guarantee
+
+				p We give energy suppliers a score out of 5 for each category - 1 is poor and 5 is excellent.
+
+				p For example, a supplier with 5 stars in the complaints column means fewer customers complained about them than a supplier with 1 star in the same column.
 
 				.callout--alert
 					p If a supplier doesn’t have a star rating it means we don’t have enough information to rate them yet.
@@ -193,6 +198,8 @@ block content
 		h2 Rating for March - June 2016
 		.flex-row
 			.col-md-8
+				p We rank suppliers by their overall rating. If you want to see how they rank by category, click on the title of that category - eg ‘bill clarity’. The table will be re-ordered.
+
 				p Click on a supplier’s name to see a breakdown of their score, their contact details and information about billing.
 		table.sortable.energy-comparison
 			thead
@@ -429,88 +436,86 @@ block content
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier W
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier X
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier Y
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier Z
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AA
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AB
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AC
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AD
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AE
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AF
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AG
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AH
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AJ
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AK
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AL
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AM
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AN
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AO
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AP
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 				tr.open-dialog3
 					td(sorttable_customkey="100") -
 					td Supplier AQ
-					td(colspan="6") Click to see more supplier information
+					td(colspan="6") We don’t have enough information to rank this supplier
 
 		.flex-row
 			.col-md-8
-				p There are currently 17 suppliers with a star rating - ranked in order of how good their customer service is.
-
 				a.blocklink(href="comparison-details.html") Find out how the scores are worked out
 
 				p We don’t have enough information to rate all the suppliers listed on this page. We’ll rate them when that information becomes available.
