dev:change: Content updates to energy comparison

--- a/libs/jade/branding/energy-rating.jade
+++ b/libs/jade/branding/energy-rating.jade
@@ -27,7 +27,7 @@ block content
 					.text
 						| 4.75 #[span.of out of 5]
 						br
-						img(src="#{dir}images/rating-50.svg")
+						img(src="#{dir}images/energy-comparison/rating-50.svg")
 					//| Performance rating
 				p
 				.ca-energyrating_tall
@@ -36,7 +36,7 @@ block content
 					.text
 						| 4.75 #[span.of / 5]
 						br
-						img(src="#{dir}images/rating-50.svg")
+						img(src="#{dir}images/energy-comparison/rating-50.svg")
 
 			pre
 				code.language-html
