--- a/libs/jade/dev/energy/comparison-details.jade
+++ b/libs/jade/dev/energy/comparison-details.jade
@@ -141,27 +141,33 @@ block content
                     tr
                         th(scope="row") Category
                         th(scope="row") Maximum category score
+                        th(scope="row") Weighting
                         th(scope="row") Counts towards overall score
                 tbody
                     tr
                         th(scope="row") Complaints
                         td 5 stars
-                        td 1.25 stars
+                        td 30%
+                        td 1.5 stars
                     tr
                         th(scope="row") Ease of contact
                         td 5 stars
+                        td 25%
                         td 1.25 stars
                     tr
                         th(scope="row") Billing clarity
                         td 5 stars
+                        td 25%
                         td 1.25 stars
                     tr
                         th(scope="row") Ease of switching
                         td 5 stars
+                        td 15%
                         td 0.75 stars
                     tr
                         th(scope="row") Switch Guarantee
                         td 3 stars
+                        td 5%
                         td 0.25 stars
 
             p Scores are rounded to the nearest 0.25.
