--- a/libs/jade/dev/energy/comparison.jade
+++ b/libs/jade/dev/energy/comparison.jade
@@ -183,12 +183,12 @@ block content
 					li how many complaints were made about them to third parties, eg Citizens Advice
 					li how easy it is to contact them
 					li how easy their bills are to understand
-					li how good suppliers are at switching
+					li how good they are at switching
 					li whether they’re signed up to the Energy Switch Guarantee
 
 				p We give energy suppliers a score out of 5 for each category - 1 is poor and 5 is excellent.
 
-				p For example, a supplier with 5 stars in the complaints column means fewer customers complained about them than a supplier with 1 star in the same column.
+				p For example, a supplier with 1 star for complaints received more complaints than a supplier with 5 stars.
 
 				.callout--alert
 					p If a supplier doesn’t have a star rating it means we don’t have enough information to rate them yet.
