dev:change: Improving the content leading into the energy comparison tool

--- a/libs/jade/dev/energy/comparison.jade
+++ b/libs/jade/dev/energy/comparison.jade
@@ -175,20 +175,13 @@ block content
 	.articleContent
 		.flex-row
 			.col-md-8
-				p Price isn’t the only thing to think about when choosing an energy supplier. It might be worth choosing a supplier that has good customer service - even if they’re a bit more expensive.
+				p Price isn’t the only thing to think about when choosing an energy supplier. It might be worth choosing a supplier that gets the fewest complaints, or one that’s easy to contact - even if they’re a bit more expensive.
 
-				p To help you compare customer service, we’ve given energy suppliers a star rating based on:
+				p To help you make that choice, we’ve compared suppliers across 5 different categories and ranked them according to how good their customer service is.
 
-				ul
-					li how many complaints were made about them to third parties, eg Citizens Advice
-					li how easy it is to contact them
-					li how easy their bills are to understand
-					li how good they are at switching
-					li whether they’re signed up to the Energy Switch Guarantee
+				p We’ve given them an overall rating out of 5 - 1 being poor and 5 being excellent. If you want to see how they rank by category, click on the title of that category and the table will be re-ordered.
 
-				p We give energy suppliers a score out of 5 for each category - 1 is poor and 5 is excellent.
-
-				p For example, a supplier with 1 star for complaints received more complaints than a supplier with 5 stars.
+				p You can see more about each supplier and their score by clicking on their name.
 
 				.callout--alert
 					p If a supplier doesn’t have a star rating it means we don’t have enough information to rate them yet.
@@ -196,11 +189,7 @@ block content
 				p #[a.blocklink(href="https://energycompare.citizensadvice.org.uk/") There’s a separate tool for comparing energy prices.]
 
 		h2 Rating for March - June 2016
-		.flex-row
-			.col-md-8
-				p We rank suppliers by their overall rating. If you want to see how they rank by category, click on the title of that category - eg ‘bill clarity’. The table will be re-ordered.
 
-				p Click on a supplier’s name to see a breakdown of their score, their contact details and information about billing.
 		table.sortable.energy-comparison
 			thead
 				tr
