dev:change: Updating table labels

--- a/libs/jade/dev/energy/comparison-details.jade
+++ b/libs/jade/dev/energy/comparison-details.jade
@@ -141,11 +141,11 @@ block content
                     tr
                         th(scope="row") Category
                         th(scope="row") Maximum category score
-                        th(scope="row") Weighting
                         th(scope="row") Counts towards overall score
+                        th(scope="row") Stars towards overall rating
                 tbody
                     tr
-                        th(scope="row") Complaints
+                        th(scope="row") Complaints to third parties
                         td 5 stars
                         td 30%
                         td 1.5 stars
