dev:add: Added a link to overlay showing when a suppliers energy is provided by another supplier

--- a/libs/jade/dev/energy/comparison.jade
+++ b/libs/jade/dev/energy/comparison.jade
@@ -549,6 +549,8 @@ block content
 									img.switch-logo(src="#{dir}/images/energy-comparison/energy-switch-guarantee-logo.jpg", alt="Energy Switch Guarantee")
 								td.commitment
 									span 3
+					p
+						a Supplier A's energy is supplied by Supplier G
 					a.blocklink(href="comparison-details.html") How the scores are worked out
 					h3 Contact information
 					p
