add: Added .hide-important, which is the same as .hide but with an important Would be good to remove this and simply add important to .hide in the future

--- a/libs/base/helpers.less
+++ b/libs/base/helpers.less
@@ -22,6 +22,7 @@
 // they are occasionally useful, though
 .right {float: right;}
 .hide {display: none;}
+.hide-important {display: none !important;}
 
 // http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 .screenreader {
