--- a/libs/jade/dev/feedback/feedback-public.jade
+++ b/libs/jade/dev/feedback/feedback-public.jade
@@ -21,6 +21,10 @@ block script
 		$('#feedback-link').on('click', function(){
 			$('#feedback-form').slideToggle('fast');
 		})
+		$('.feedback-next').on('click', function(){
+			$(this).parent().slideUp('fast');
+			$(this).parent().next().slideDown('fast');
+		})
 		$('#send').on('click', function(){
 			$('#feedback-content').slideUp({
 			    complete: function(){
@@ -34,13 +38,30 @@ block feedback
 	p Is there anything wrong with this page? #[a#feedback-link Let us know].
 	#feedback-form
 		#feedback-content
-			.callout--alert If you need help with a problem now, #[a contact your nearest Citizens Advice], or the #[a Citizens Advice consumer helpline] on #[strong 03454 04 05 06].
-			p Don’t include any personal or financial information such as your national insurance number or credit card details in your entry.
-			.fieldset
-				label(for="wrong") What’s wrong with this page?
-				textarea#wrong
-			.fieldset
-			a#send.btn Send
+			.feedback-page
+				.callout--alert If you need help with a problem now, #[a contact your nearest Citizens Advice], or the #[a Citizens Advice consumer helpline] on #[strong 03454 04 05 06].
+				a.feedback-next.btn.right-button-icon Leave feedback
+			.feedback-page(style="display:none;")
+				.fieldset
+					fieldset
+						legend(for="radio") What went wrong with this page?
+						label.radio.radio--block
+							input(checked, name="radio", type="radio", value="option1")
+							| Broken link
+						label.radio.radio--block
+							input(name="radio", type="radio", value="option2")
+							| Incorrect content
+						label.radio.radio--block
+							input(name="radio", type="radio", value="option3")
+							| Couldn't complete a tool
+				a.feedback-next.btn.right-button-icon Next
+			.feedback-page(style="display:none;")
+				//-p Don’t include any personal or financial information such as your national insurance number or credit card details in your entry.
+				.fieldset
+					label(for="wrong") Please give some information
+					span.form-hint Don’t include any personal or financial information such as your national insurance number or credit card details in your entry.
+					textarea#wrong
+				a#send.btn.tick-button-icon Send
 		#feedback-confirmation
 			p Thank you for your feedback - we’ll use it to improve our advice in the future.
 			p If you need advice now, #[a contact your nearest Citizens Advice], or the #[a Citizens Advice consumer helpline] on #[strong 03454 04 05 06].
