change: Moved energy comparison styles into main repo for next release

--- a/libs/site.less
+++ b/libs/site.less
@@ -43,6 +43,7 @@
 @import "modules/cookie-monster";
 @import "modules/decision-tree";
 @import "modules/dialog";
+@import "modules/energy-comparison";
 @import "modules/epi-templates";
 @import "modules/extent-switcher";
 @import "modules/extent-switcher-modal";
