--- a/libs/jade/dev/stars.jade
+++ b/libs/jade/dev/stars.jade
@@ -1,5 +1,12 @@
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js", type="text/javascript")
 style.
+	#star-wrapper {
+		margin-top: 1rem;
+		padding: 1rem 0;
+		border-top: #eeeeee 1px solid;
+		border-bottom: #eeeeee 1px solid;
+		color: #606060;
+	}
 	#star-rating {
 		height: 25px;
 		display: table;
@@ -107,7 +114,7 @@ script.
 		});
 	});
 
-.title__subheading--footer
+#star-wrapper
 	#star-rating
 		span#star-question How helpful was this page?
 		ul#star-list
