--- a/libs/jade/dev/search/results-adviser.jade
+++ b/libs/jade/dev/search/results-adviser.jade
@@ -16,32 +16,32 @@ block content
 	.flex-row
 		.col-md-8.col-sm-12
 			.term-suggestion Did you mean #[a benefits]?
-			.term-correction Showing results for #[strong benefits]
+			.term-correction Showing #[strong 89] results for #[strong benefits]
 			ul.search-results
 
 				li
 					.heading
 						a Benefits
 					.description These pages give you information on benefits and tax credits if you are working or unemployed, sick or disabled, a parent, a young person, an older person or a veteran.
-					//-.adviser-categories
+					.adviser-categories
 						ul(style="margin:0")
 							li #[a Benefits fact sheets]
 							li #[a Universal Credit]
 							li #[a Help if on a low income]
-							li(style="margin:0") #[a Making welfare work locally]
+							li #[a Making welfare work locally]
 
 				li
 					.heading
 						a Sick or disabled people and carers
 					.description If you're sick or disabled, you may be able to claim benefits and tax credits.
-					//-ul.section
+					ul.section
 						li #[a Benefits]
 
 				li
 					.heading
 						a Employment and Support Allowance (ESA)
 					.description Information on how to claim Employment and Support Allowance including eligibility, filling in the ESA1 and ESA50 forms and challenging an ESA decision.
-					//-ul.section
+					ul.section
 						li #[a Benefits]
 						li #[a Sick or disabled people and carers]
 
@@ -49,7 +49,7 @@ block content
 					.heading
 						a Contractual sick pay
 					.description If an employer has their own sick pay scheme it should be included in your client’s employment contract.
-					//-ul.section
+					ul.section
 						li #[a Workplace rights]
 						li #[a Sick pay]
 
@@ -57,7 +57,7 @@ block content
 					.heading
 						a Benefits for families and children
 					.description Benefits for pregnant women and parents, including maternity allowance, maternity grants, child benefit and child trust fund.
-					//-ul.section
+					ul.section
 						li #[a Benefits]
 						li #[a Children and young people]
 
