--- a/libs/jade/dev/stars.jade
+++ b/libs/jade/dev/stars.jade
@@ -1,20 +1,42 @@
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js", type="text/javascript")
 style.
 	#star-wrapper {
-		margin-top: 1rem;
-		padding: 1rem 0;
-		border-top: #eeeeee 1px solid;
-		border-bottom: #eeeeee 1px solid;
-		color: #606060;
+		padding: .75em 1em;
+		padding: 12px 16px;
+		padding: 0.75rem 1rem;
+		margin: 12px 0;
+		margin: 0.75rem 0;
+		display: block;
+		background-color: #fff;
+		border: 0px #4ab7ff solid;
+		border-left-width: 8px;
+		border-left-width: 0.5rem;
+		color: #191926;
+		border: 0px #004B88 solid;
+		border-width: 1px;
+		border-radius: 2px;
 	}
 	#star-rating {
 		height: 25px;
 		display: table;
 	}
+	#star-wrapper h4 {
+		margin-bottom: 0;
+		font-size: 16px;
+		font-size: 1rem;
+		font-weight: 600;
+		line-height: 1.3;
+		color: #004b88;
+		font-weight: 700;
+		margin-top: 1em;
+		margin-bottom: .6em;
+	}
 	#star-rating #star-question {
 		display: table-cell;
 		vertical-align: middle;
+		padding-right: 12px;
 		padding-right: .75rem;
+		line-height: 16px;
 		line-height: 1em;
 	}
 	#star-rating #star-list {
@@ -24,7 +46,9 @@ style.
 		cursor: pointer;
 		display: table-cell;
 		vertical-align: middle;
+		padding-right: 4px;
 		padding-right: .25rem;
+		line-height: 16px;
 		line-height: 1em;
 	}
 	#star-rating #star-list.deactivated {
@@ -97,6 +121,7 @@ script.
 			}
 			// Deactivate stars with .deactivated
 			thisObj.parent().addClass("deactivated");
+			$("#star-wrapper").append('<h4>Thank you for your feedback</h4>');
 
 			// Replace console.log with GA hook and cookie
 			console.log("User rated " + starData);
