fix: Fixing email page styles which didnt account for the button tag

--- a/libs/modules/share-bar.less
+++ b/libs/modules/share-bar.less
@@ -63,6 +63,30 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
     display: inline-block;
 }
 
+.a-social-email,
+.a-social-email:hover,
+.a-social-email:active,
+.a-social-email:focus {
+    position: relative;
+    padding: .25rem;
+    border: none;
+    font-size: 1rem;
+    font-weight: @font-weight-base;
+    font-size: 0.875rem;
+    background: none;
+    border-radius: 0;
+    margin: 0;
+    color: @link-color;
+    line-height: 2rem;
+    margin-right: 1rem;
+}
+
+.a-social-email:hover,
+.a-social-email:active,
+.a-social-email:focus {
+    background-color: lighten(@link-color, 75%);
+}
+
 
 /*
  ************************************************************************************
