--- a/libs/jade/modules/toolbar.jade
+++ b/libs/jade/modules/toolbar.jade
@@ -49,7 +49,7 @@ block content
 				a.a-social-twitter(href="https://twitter.com/share?url=", data-track="Twitter", rel="external") Twitter
 				a.a-social-facebook(href="https://www.facebook.com/sharer/sharer.php?u=", data-track="Facebook", rel="external") Facebook
 				a.a-social-linkedin(target="_blank", data-track="LinkedIn") LinkedIn
-				a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
+				button.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 				button.a-social-copy Copy link
 					.copied Copied!
 		pre
@@ -71,6 +71,6 @@ block content
 				|     &lt;a class="a-social-twitter" data-track="Twitter" href="https://twitter.com/share?url=" rel="external"&gt;Twitter&lt;/a&gt;
 				|     &lt;a class="a-social-facebook" data-track="Facebook" href="https://www.facebook.com/sharer/sharer.php?u=" rel="external"&gt;Facebook&lt;/a&gt;
 				|     &lt;a class="a-social-linkedin" target="_blank" data-track="LinkedIn"&gt;LinkedIn&lt;/a&gt;
-				|     &lt;a class="a-social-email" data-track="Email page" href="javascript:emailCurrentPage()"&gt;Email&lt;/a&gt;
+				|     &lt;button class="a-social-email" data-track="Email page" href="javascript:emailCurrentPage()"&gt;Email&lt;/button&gt;
 				|     &lt;button class="a-social-copy"&gt;Copy link&lt;div class="copied"&gt;Copied!&lt;/div&gt;&lt;/button&gt;
 				| &lt;/div&gt;
