add: Adding styles for star rating tool, and v2 mockup

--- a/libs/site.less
+++ b/libs/site.less
@@ -75,6 +75,7 @@
 @import "modules/skip-nav";
 @import "modules/slide";
 @import "modules/speech-lines";
+@import "modules/star-rating";
 @import "modules/status";
 @import "modules/tablesort";
 @import "modules/tabs";
