dev:fix: RGB values were displaying incorrectly because of a silly typo :/

--- a/libs/guide/swatches.less
+++ b/libs/guide/swatches.less
@@ -7,7 +7,7 @@
         @red: red(@color);
         @blue: blue(@color);
         @green: green(@color);
-        content: %("@{color} \A R:%S \A G:%S \A B:%S", round(@red,0), round(@blue,0), round(@green,0));
+        content: %("@{color} \A R:%S \A G:%S \A B:%S", round(@red,0), round(@green,0), round(@blue,0));
         white-space: pre;
     }
 }
