dev:change: Removed 'guide' references - Changed guide/ -> docs/ - Renamed guide.less -> dev.less - Updated .npmignore to correctly ignore these changes

--- a/libs/jade/dev/punctuation/result.jade
+++ b/libs/jade/dev/punctuation/result.jade
@@ -10,7 +10,7 @@ html.no-js
 		meta(content="B53C5C20449FC2233D3862B4DBEDFA3E", name="msvalidate.01")
 
 		// Stylesheets
-		link(href="../../css/guide.css", rel="stylesheet")
+		link(href="../../css/dev.css", rel="stylesheet")
 
 	body
 		div(style="max-width:900px;padding:10px;margin:10px auto")
