--- a/libs/styles/dev.less
+++ b/libs/styles/dev.less
@@ -10,10 +10,10 @@
 
 // Import styleguide specific styles
 @import "vendors/prism/prism";
-@import "guide/simplegrid";
-@import "guide/swatches";
-@import "guide/icons";
-@import "guide/story";
+@import "docs/simplegrid";
+@import "docs/swatches";
+@import "docs/icons";
+@import "docs/story";
 
 body {
     padding-top:        0px;
