--- a/libs/template/template.min.jade
+++ b/libs/template/template.min.jade
@@ -19,7 +19,7 @@ html.no-js
 		meta(content="#{dir}static/images/dev/apple-touch-icon.png")
 
 		// Stylesheets
-		link(href="#{dir}css/guide.css", rel="stylesheet")
+		link(href="#{dir}css/dev.css", rel="stylesheet")
 		link(href="#{dir}images/dev/favicon/32.png", rel="shortcut icon")
 		link(href="#{dir}images/dev/favicon/228.png", rel="apple-touch-icon")
 
