--- a/libs/jade/dev/site/webchat-live-example.jade
+++ b/libs/jade/dev/site/webchat-live-example.jade
@@ -11,7 +11,7 @@ html.no-js
 		meta(content="B53C5C20449FC2233D3862B4DBEDFA3E", name="msvalidate.01")
 
 		// Stylesheets
-		link(href="../../css/guide.css", rel="stylesheet")
+		link(href="../../css/dev.css", rel="stylesheet")
 		link(href="../../images/dev/favicon/32.png", rel="shortcut icon")
 		link(href="../../images/dev/favicon/228.png", rel="apple-touch-icon")
 
