--- a/libs/template/email-template.jade
+++ b/libs/template/email-template.jade
@@ -22,7 +22,7 @@ html.no-js
 		meta(content="B53C5C20449FC2233D3862B4DBEDFA3E", name="msvalidate.01")
 
 		// Stylesheets
-		link(href="#{dir}css/guide.css", rel="stylesheet")
+		link(href="#{dir}css/dev.css", rel="stylesheet")
 		link(href="#{dir}images/dev/favicon/32.png", rel="shortcut icon")
 		link(href="#{dir}images/dev/favicon/228.png", rel="apple-touch-icon")
 
