dev:change: Beginning to rearrange style files

--- a/libs/styles/dev.less
+++ b/libs/styles/dev.less
@@ -9,7 +9,7 @@
 @import "site";
 
 // Import styleguide specific styles
-@import "vendors/prism/prism";
+@import "base/vendors/prism/prism";
 @import "docs/simplegrid";
 @import "docs/swatches";
 @import "docs/icons";
