--- a/libs/styles/print.less
+++ b/libs/styles/print.less
@@ -2,9 +2,9 @@
  * Print Stylesheet
  */
 
-@import (reference) "site";
-@import "vendors/normalize";
-@import "base/type";
+@import (reference) "styles";
+@import "base/vendors/normalize";
+@import "components/type";
 
 /* Print styles */
 @media print {
