--- a/libs/styles/webchat.less
+++ b/libs/styles/webchat.less
@@ -5,36 +5,36 @@
  */
 
 /* Vendor files */
-@import "vendors/normalize";
-@import "vendors/brand-icon";
+@import "base/vendors/normalize";
+@import "base/vendors/brand-icon";
 
 /* Base files */
 @import "base/colors";
-@import "base/buttons";
-@import "base/forms";
-@import "base/framework";
+@import "components/buttons";
+@import "components/forms";
+@import "components/framework";
 @import "base/global";
-@import "base/helpers";
+@import "components/helpers";
 @import "base/icons";
 @import "base/ie";
-@import "base/lists";
-@import "base/tables";
-@import "base/type";
+@import "components/lists";
+@import "components/tables";
+@import "components/type";
 @import "base/utility";
 @import "base/variables";
 
 /* Mixin files */
-@import "mixins/btn-icon";
-@import "mixins/buttons";
-@import "mixins/callout";
-@import "mixins/fit-content";
-@import "mixins/flex-box";
-@import "mixins/ie";
-@import "mixins/limit-width";
-@import "mixins/popup";
-@import "mixins/revealable";
-@import "mixins/spin";
-@import "mixins/vertical-align";
+@import "base/mixins/btn-icon";
+@import "base/mixins/buttons";
+@import "base/mixins/callout";
+@import "base/mixins/fit-content";
+@import "base/mixins/flex-box";
+@import "base/mixins/ie";
+@import "base/mixins/limit-width";
+@import "base/mixins/popup";
+@import "base/mixins/revealable";
+@import "base/mixins/spin";
+@import "base/mixins/vertical-align";
 
 /* Module files */
 @import "modules/blocklink";
@@ -42,7 +42,7 @@
 @import "modules/dialog";
 @import "modules/overlay";
 @import "modules/revealable";
-@import "modules/side-chat";
+@import "theme/side-chat";
 @import "modules/side-links";
 
 /* Print styles */
