--- a/libs/styles/styles.less
+++ b/libs/styles/styles.less
@@ -50,7 +50,6 @@
 @import "modules/extent-switcher";
 @import "modules/extent-switcher-modal";
 @import "modules/feed";
-@import "modules/financial-statement";
 @import "modules/footer";
 @import "modules/footer-feedback";
 @import "modules/header";
@@ -74,7 +73,7 @@
 @import "modules/side-links";
 @import "modules/sidebar-navigation";
 @import "modules/sidebar-navigation-accordion";
-@import "modules/skip-nav";
+@import "theme/skip-nav";
 @import "modules/slide";
 @import "modules/speech-lines";
 @import "modules/status";
