dev:change: Some button weirdness caused by rearranging files

--- a/libs/styles/dev.less
+++ b/libs/styles/dev.less
@@ -9,11 +9,8 @@
 @import "site";
 
 // Import styleguide specific styles
-@import "base/vendors/prism/prism";
-@import "docs/simplegrid";
-@import "docs/swatches";
-@import "docs/icons";
-@import "docs/story";
+@import "base/vendors/prism/**";
+@import "docs/**";
 
 body {
     padding-top:        0px;
