--- a/libs/styles/components/buttons.less
+++ b/libs/styles/components/buttons.less
@@ -343,3 +343,17 @@ button:disabled {
         text-decoration: none;
     }
 }
+
+.btn-small {
+    padding: .3em .5em;
+    margin-left: .25rem;
+    font-size: @font-size-small;
+    color: @heritage-blue;
+    background-color: @white;
+    border-radius: @form-border-radius;
+    font-weight: @font-weight-bold;
+    &:hover,
+    &:active,
+    &:focus  {
+    }
+}
