dev:change: Globular dude

--- a/libs/styles/dev.less
+++ b/libs/styles/dev.less
@@ -9,8 +9,8 @@
 @import "site";
 
 // Import styleguide specific styles
-@import "base/vendors/prism/**";
-@import "docs/**";
+@import "base/vendors/prism/*";
+@import "docs/*";
 
 body {
     padding-top:        0px;
@@ -540,4 +540,4 @@ div.tooltip:before {
 * Modules that are currently in development
 */
 
-@import "dev/**";
+@import "dev/*";
