--- a/libs/styles/styles.less
+++ b/libs/styles/styles.less
@@ -1,6 +1,5 @@
 /* Vendor files */
-@import "base/vendors/normalize";
-@import "base/vendors/brand-icon";
+@import "base/vendors/*";
 
 /* Mixin files */
 @import "base/mixins/btn-icon";
@@ -74,14 +73,9 @@
 @import "modules/title";
 
 /* Base files */
-@import "base/colors";
-@import "base/global";
-@import "base/icons";
-@import "base/ie";
-@import "base/utility";
-@import "base/variables";
+@import "base/*";
 
 /* Print styles */
 @media print {
-	@import "base/print";
+	@import "base/print/*";
 }
