dev:change: Fully embracing globs to make everyones life easier

--- a/libs/styles/site.less
+++ b/libs/styles/site.less
@@ -1,5 +1,22 @@
-/**
- * Theme Stylesheet
- */
+/* Vendor files */
+@import "base/vendors/*";
 
-@import "styles";
+/* Mixin files */
+@import "base/mixins/*";
+
+/* Component files */
+@import "components/*";
+
+/* Module files */
+@import "modules/*";
+
+/* Theme files */
+// @import "theme/*";
+
+/* Base files */
+@import "base/*";
+
+/* Print styles */
+@media print {
+	@import "base/print/*";
+}
