--- a/libs/styles/styles.less
+++ b/libs/styles/styles.less
@@ -2,75 +2,16 @@
 @import "base/vendors/*";
 
 /* Mixin files */
-@import "base/mixins/btn-icon";
-@import "base/mixins/buttons";
-@import "base/mixins/callout";
-@import "base/mixins/fit-content";
-@import "base/mixins/flex-box";
-@import "base/mixins/ie";
-@import "base/mixins/limit-width";
-@import "base/mixins/popup";
-@import "base/mixins/revealable";
-@import "base/mixins/spin";
-@import "base/mixins/vertical-align";
+@import "base/mixins/*";
 
 /* Component files */
-@import "components/buttons";
-@import "components/forms";
-@import "components/framework";
-@import "components/helpers";
-@import "components/lists";
-@import "components/tables";
-@import "components/type";
+@import "components/*";
 
 /* Module files */
-@import "theme/adviser";
-@import "modules/blocklink";
-@import "modules/blog";
-@import "modules/breadcrumb";
-@import "modules/callout";
-@import "modules/calls-for-evidence";
-@import "modules/cards";
-@import "modules/containers";
-@import "modules/contents-page";
-@import "modules/cookie-monster";
-@import "modules/decision-tree";
-@import "modules/dialog";
-@import "theme/energy-comparison";
-@import "theme/epi-templates";
-@import "modules/extent-switcher";
-@import "modules/extent-switcher-modal";
-@import "modules/feed";
-@import "modules/footer";
-@import "modules/footer-feedback";
-@import "modules/header";
-@import "modules/letter";
-@import "modules/main-content";
-@import "theme/main-nav";
-@import "modules/navigation";
-@import "modules/notice";
-@import "modules/overlay";
-@import "modules/page-info";
-@import "modules/page-list";
-@import "modules/page-tree";
-@import "modules/paragraph-numbers.less";
-@import "modules/references";
-@import "modules/revealable";
-@import "modules/savebar";
-@import "modules/search-results";
-@import "modules/section-notice";
-@import "modules/share-bar";
-@import "theme/side-chat";
-@import "modules/side-links";
-@import "modules/sidebar-navigation";
-@import "modules/sidebar-navigation-accordion";
-@import "theme/skip-nav";
-@import "modules/slide";
-@import "modules/speech-lines";
-@import "modules/status";
-@import "modules/tablesort";
-@import "modules/tabs";
-@import "modules/title";
+@import "modules/*";
+
+/* Theme files */
+@import "theme/*";
 
 /* Base files */
 @import "base/*";
